# docker-droid

./: .gitignore  AGENTS.md  LICENSE  README.md  ROADMAP.md  app.json  design_guidelines.md  eas.json  package-lock.json  package.json  replit.md
.github/workflows/: eas-build.yml
android/: gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/qemu/: alpine-setup.sh  qemu-config.json
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/java/com/dockerandroid/app/: CrashHandler.kt  MainActivity.kt  MainApplication.kt
android/app/src/main/jni/: Android.mk  Application.mk  qemu_jni.c
android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
android/app/src/main/res/values-night/: colors.xml
client/: App.tsx
client/components/: Button.tsx  Card.tsx  ContainerCard.tsx  EmptyState.tsx  GrainOverlay.tsx  HeaderTitle.tsx  ImageCard.tsx  LoadingSpinner.tsx  SettingsRow.tsx  StatCard.tsx  StatusBadge.tsx  ThemedText.tsx  VMStatusCard.tsx
client/constants/: theme.ts
client/navigation/: ContainersStackNavigator.tsx  HomeStackNavigator.tsx  ImagesStackNavigator.tsx  MainTabNavigator.tsx  RootStackNavigator.tsx
client/screens/: ContainerDetailScreen.tsx  ContainersScreen.tsx  CreateContainerScreen.tsx  HomeScreen.tsx  ImagesScreen.tsx  SettingsScreen.tsx  TerminalScreen.tsx  WebViewScreen.tsx
client/services/: DockerAPI.ts  QemuService.ts
client/store/: useDockerStore.ts  useQemuStore.ts  useSettingsStore.ts
plugins/expo-plugin-docker-android/: index.js
(+3 files in other folders)
